--- a/templates/nginx.conf.j2
+++ b/templates/nginx.conf.j2
@@ -1,27 +1,24 @@
+worker_processes  1;
+
+events {
+    worker_connections  1024;
+}
+
 http {
+    include       mime.types;
+    default_type  application/octet-stream;
+
+    sendfile        on;
+    keepalive_timeout  65;
+
+    include       /etc/nginx/conf.d/*.conf;
+
+    # redirect http to https
     server {
         listen 80 default_server;
-        listen [::]:80 default_server;
 
-        root /var/www/html/menta.me/;
-        charset UTF-8;
-        access_log  /var/log/nginx/sample.com.access.log;
-        error_log /var/log/nginx/sample.com.error.log;
+        server_name _;
 
-        location / {
-            index  index.php index.html index.htm;
-        }
-
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   /usr/share/nginx/html;
-        }
-
-        location ~ \.php$ {
-            fastcgi_pass   unix:/var/run/php-fpm/php-fpm.sock;
-            fastcgi_index  index.php;
-            fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
-            include        fastcgi_params;
-        }
+        return 301 https://$host$request_uri;
     }
 }
