--- a/roles/nginx/files/nginx.conf.j2
+++ b/roles/nginx/files/nginx.conf.j2
@@ -1,4 +1,4 @@
-worker_processes  1;
+worker_processes  auto;
 
 events {
     worker_connections  1024;
@@ -13,12 +13,13 @@ http {
 
     include       /etc/nginx/conf.d/*.conf;
 
-    # redirect http to https
     server {
-        listen 80 default_server;
+        listen       80;
+        server_name  localhost;
 
-        server_name _;
-
-        return 301 https://$host$request_uri;
+        location / {
+            root   html;
+            index  index.html index.htm;
+        }
     }
 }
