--- a/roles/nginx/files/www.example.com.conf.j2
+++ b/roles/nginx/files/www.example.com.conf.j2
@@ -1,7 +1,17 @@
+# redirect http to https
+server {
+    listen 80;
+
+    server_name {{ http_host }};
+
+    return 301 https://$host$request_uri;
+}
+
+# SSL settings
 server {
     server_name {{ http_host }};
     listen 443 ssl;
-    ssl_certificate /etc/ssl/private/{{ http_host }}.csr;
+    ssl_certificate /etc/ssl/private/{{ http_host }}.pem;
     ssl_certificate_key /etc/ssl/private/privkey.pem;
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
     ssl_ciphers "HIGH:!aNULL:!MD5 or HIGH:!aNULL:!MD5:!3DES";
